--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://cnbbooks.github.io/lfe-music-programming/current/" />
+<meta http-equiv="refresh" content="0; url=https://undertone.lfe.io/book/current/" />
